--- a/src/pages/student-app/timeTable/main/main.html
+++ b/src/pages/student-app/timeTable/main/main.html
@@ -23,7 +23,7 @@
         </ion-list-header>
         <ion-list no-lines>
             <ion-item-sliding *ngFor="let period of selectedDayTimetable">
-                <button ion-item class="timetable-item" (click)="openViewPage(period)">
+                <ion-item class="timetable-item" (click)="openViewPage(period)">
                     <ion-grid no-padding>
                         <ion-row>
                             <ion-col col-4 class="border border-right-progress left-col" text-right>
@@ -43,14 +43,14 @@
                             </ion-col>
                         </ion-row>
                     </ion-grid>
-                </button>
+                </ion-item>
             </ion-item-sliding>
         </ion-list>
-        <ion-list *ngIf="timetableData && (!selectedDayTimetable || selectedDayTimetable?.length==0)">
-            <ion-item>
-                <h1>NO MODULE ON THIS DAY</h1>
-            </ion-item>
-        </ion-list>
+      <!-- <no-results *ngIf="timetableData && (!selectedDayTimetable || selectedDayTimetable?.length==0)"></no-results> -->
+      <div class="no_records" *ngIf="timetableData && (!selectedDayTimetable || selectedDayTimetable?.length==0)">
+        <img src="assets/images/empty.png">
+        <div></div>
+    </div>
     </ion-list>
 
 
