--- a/src/custom-components/login/login.html
+++ b/src/custom-components/login/login.html
@@ -3,7 +3,7 @@
 <!-- AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA -->
 
 
-<ion-content padding class="background-image">
+<ion-content class="background-image">
     <img class="center-block" src="http://www.ramjascollege.edu/images/logo.png" margin-top>
     <div text-center margin-top>
       <h1 class="textWhite">Login</h1>
@@ -24,36 +24,37 @@
       
     </ion-list> -->
 <!-- NITIN -->
+<ion-card padding>
+  <div style="overflow:hidden">
+    <ion-segment [(ngModel)]="loginType" color="primary">
+      <ion-segment-button value="student">
+        Student 
+      </ion-segment-button>
+      <ion-segment-button value="management">
+        Management 
+      </ion-segment-button>
+    </ion-segment>
+  </div>
+  
+  <form [formGroup]="loginForm" (ngSubmit)="login()" novalidate>
+ 
+        <ion-item>
+            <ion-icon name="person" item-left color="primary"></ion-icon>
+            <ion-input type="text" formControlName="username" placeholder="Username"></ion-input>
+        </ion-item>
+  
+        <ion-item>
+            <ion-icon name="lock" item-left color="primary"></ion-icon>
+            <ion-input type="password" formControlName="password" placeholder="Password"></ion-input>
+        </ion-item>
+  
 
-<div style="overflow:hidden">
-  <ion-segment [(ngModel)]="loginType" color="primary">
-    <ion-segment-button value="student">
-      Student 
-    </ion-segment-button>
-    <ion-segment-button value="management">
-      Management 
-    </ion-segment-button>
-  </ion-segment>
-</div>
+  
+    <button ion-button full type="submit" [disabled]="!loginForm.valid">Login</button>
+  
+  </form>
+</ion-card>
 
-<form [formGroup]="loginForm" (ngSubmit)="login()" novalidate>
-  <ion-list margin-top>
-
-      <ion-item>
-          <ion-icon name="person" item-left color="color2"></ion-icon>
-          <ion-input type="text" formControlName="username" placeholder="Username"></ion-input>
-      </ion-item>
-
-      <ion-item>
-          <ion-icon name="lock" item-left color="color1"></ion-icon>
-          <ion-input type="password" formControlName="password" placeholder="Password"></ion-input>
-      </ion-item>
-
-  </ion-list>
-
-  <button ion-button full type="submit" [disabled]="!loginForm.valid">Login</button>
-
-</form>
 
   
   </ion-content>
