--- a/src/pages/student-app/assessment/summative/summative.html
+++ b/src/pages/student-app/assessment/summative/summative.html
@@ -2,7 +2,7 @@
     <nl-navbar [title]="title"></nl-navbar>
 </ion-header>
 
-<ion-content >
+<ion-content>
     <ion-refresher (ionRefresh)="doRefresh($event)">
         <ion-refresher-content></ion-refresher-content>
     </ion-refresher>
@@ -15,6 +15,8 @@
                 <b>Faculty: </b>{{assess.facultyName}}</p>
             <p>
                 <b>Title: </b>{{assess.title}}</p>
+            <p>
+                <b>Type: </b>{{assess.assesmentTypeName}}</p>
         </button>
     </ion-list>
 
