--- a/src/pages/management-app/attendance/edit/edit.html
+++ b/src/pages/management-app/attendance/edit/edit.html
@@ -75,10 +75,10 @@
                             <ion-label>A</ion-label>
                             <ion-radio value="A"></ion-radio>
                         </ion-item>
-                        <ion-item>
+                        <!-- <ion-item>
                             <ion-label>L</ion-label>
                             <ion-radio value="L"></ion-radio>
-                        </ion-item>
+                        </ion-item> -->
     
                     </ion-list>
             </ion-card>
